# DevilutionX

./: .copilot  .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  EF_todo.txt  build_output.txt  codecov.yml  copilot-instructions.md  objects_test_results.json  vcpkg.json
Source/: CMakeLists.txt  appfat.h  automap.cpp  automap.h  capture.h  codec.h  crawl.hpp  cursor.cpp  cursor.h  dead.cpp  dead.h  debug.cpp  debug.h  diablo.cpp  diablo.h  diablo_msg.hpp  doom.h  effects.h  encrypt.h  game_mode.hpp  gamemenu.cpp  gamemenu.h  gmenu.cpp  gmenu.h  headless_mode.hpp  help.h  hwcursor.hpp  init.hpp  interfac.cpp  interfac.h  inv.cpp  inv.h  inv_iterators.hpp  item_pool.cpp  item_pool.h  items.cpp  items.h  lighting.cpp  lighting.h  loadsave.cpp  (+49 more)
Source/DiabloUI/: credits.cpp  diabloui.cpp  diabloui.h  dialogs.cpp  mainmenu.cpp  selok.cpp  selstart.cpp  settingsmenu.cpp
Source/application/: appfat.cpp  appfat.h  capture.cpp  capture.h  debug.cpp  debug.h  diablo.cpp  diablo.h  fatal_error.cpp  fatal_error.h  game_mode.cpp  game_mode.hpp  headless_mode.cpp  headless_mode.hpp  init.cpp  init.hpp  main.cpp  restrict.cpp
Source/control/: control.hpp  control_chat.cpp  control_chat_commands.cpp  control_flasks.cpp  control_infobox.cpp  control_panel.cpp
Source/controls/: axis_direction.cpp  axis_direction.h  control_mode.cpp  control_mode.hpp  controller.cpp  controller.h  controller_buttons.cpp  controller_buttons.h  controller_motion.cpp  controller_motion.h  game_controls.cpp  game_controls.h  input.h  keymapper.cpp  keymapper.hpp  menu_controls.cpp  menu_controls.h  modifier_hints.cpp  modifier_hints.h  padmapper.cpp  padmapper.hpp  player_controls.cpp  player_controls.h  plrctrls.cpp  plrctrls.h  remap_keyboard.h
Source/crypto/: codec.cpp  encrypt.cpp  sha.cpp
Source/data/: content_manifest.cpp  content_manifest.hpp  file.cpp  file.hpp  game_data_manager.cpp  game_data_manager.hpp  iterators.hpp  mod_manager.cpp  mod_manager.hpp  mpq_file.cpp  mpq_file.hpp  parser.cpp  parser.hpp  record_reader.cpp  record_reader.hpp  value_reader.cpp  value_reader.hpp
Source/debug_overlay/: console_history.cpp  console_history.hpp  imgui_overlay.cpp  imgui_overlay.hpp  overlay_state.cpp  overlay_state.hpp
Source/discord/: discord.cpp
Source/dvlnet/: base.cpp  base.h  base_protocol.h  frame_queue.cpp  loopback.cpp  packet.cpp  packet.h  protocol_zt.cpp  tcp_client.cpp  tcp_server.cpp  tcp_server.h  zerotier_native.cpp
Source/engine/: actor.hpp  actor_position.cpp  actor_position.hpp  animationinfo.cpp  animationinfo.h  assets.cpp  assets.hpp  attributes.hpp  bestiary.cpp  bestiary.hpp  combat_actor.hpp  crawl.cpp  crawl.hpp  cursor.cpp  cursor.h  demomode.cpp  displacement.hpp  dx.cpp  effects.cpp  effects.h  effects_stubs.cpp  events.cpp  events.hpp  hwcursor.cpp  hwcursor.hpp  lighting.cpp  lighting.h  lighting_defs.hpp  load_cel.cpp  load_cl2.hpp  load_clx.cpp  palette.cpp  palette.h  path.cpp  path.h  random.cpp  sdl_events.cpp  sdl_events.hpp  sound.cpp  sound.h  (+9 more)
Source/items/: validation.cpp
Source/levels/: crypt.cpp  drlg_l1.cpp  drlg_l2.cpp  drlg_l3.cpp  drlg_l4.cpp  gendung.cpp  gendung.h  level.cpp  level.hpp  setmaps.cpp  setmaps.h  themes.cpp  tile.hpp  tile_migration_example.cpp  tile_properties.cpp  tile_properties.hpp  tile_sync.hpp  tile_test.cpp  tile_usage_examples.cpp  town.cpp  trigs.cpp
Source/lua/: autocomplete.cpp  autocomplete.hpp  lua_event.cpp  lua_event.hpp  lua_global.cpp  lua_global.hpp  metadoc.hpp  repl.cpp  repl.hpp
Source/menus/: button.cpp  button.h  credits.cpp  credits_lines.cpp  diabloui.cpp  diabloui.h  dialogs.cpp  dialogs.h  mainmenu.cpp  progress.cpp  scrollbar.cpp  scrollbar.h  selok.cpp  selstart.cpp  selyesno.cpp  settingsmenu.cpp  settingsmenu.h  support_lines.cpp  text_input.cpp  text_input.hpp  title.cpp  ui_item.h
Source/monsters/: validation.cpp
Source/mpq/: mpq_reader.cpp  mpq_sdl_rwops.cpp  mpq_writer.cpp
Source/net_transport/: abstract_net.cpp  abstract_net.h  base.cpp  base.h  base_protocol.h  cdwrap.cpp  cdwrap.h  frame_queue.cpp  frame_queue.h  loopback.cpp  loopback.h  packet.cpp  packet.h  protocol_zt.cpp  protocol_zt.h  tcp_client.cpp  tcp_client.h  tcp_server.cpp  tcp_server.h  zerotier_lwip.cpp  zerotier_native.cpp
Source/network/: msg.cpp  msg.h  multi.cpp  multi.h  nthread.cpp  nthread.h  sync.cpp  sync.h  tmsg.cpp
Source/panel/: charpanel.cpp  charpanel.hpp  console.cpp  console.hpp  control.hpp  control_chat.cpp  control_chat.hpp  control_chat_commands.cpp  control_flasks.cpp  control_flasks.hpp  control_gold.cpp  control_infobox.cpp  control_panel.cpp  control_panel.hpp  info_box.cpp  mainpanel.cpp  mainpanel.hpp  partypanel.cpp  spell_book.cpp  spell_icons.cpp  spell_icons.hpp  spell_list.cpp
Source/panels/: charpanel.cpp  console.cpp  console.hpp  partypanel.cpp  spell_book.cpp  spell_icons.cpp  spell_list.cpp
Source/persistence/: loadsave.cpp  loadsave.h  options.cpp  options.h  pack.cpp  pack.h  pfile.cpp  pfile.h  save_file.cpp  save_file.h
Source/platform/: locale.cpp  locale.hpp
Source/players/: validation.cpp
Source/portals/: validation.hpp
Source/qol/: autopickup.cpp  autopickup.h  chatlog.cpp  chatlog.h  floatingnumbers.cpp  floatingnumbers.h  itemlabels.cpp  itemlabels.h  monhealthbar.cpp  stash.cpp  stash.h  visual_store.cpp  visual_store.h  xpbar.cpp
Source/quests/: validation.hpp
Source/storm/: storm_net.cpp  storm_net.hpp  storm_svid.cpp
Source/support/: codec.cpp  encrypt.cpp  sha.cpp
Source/tables/: itemdat.cpp  itemdat.h  leveldat.cpp  leveldat.h  misdat.cpp  misdat.h  monstdat.cpp  monstdat.h  objdat.cpp  objdat.h  playerdat.cpp  playerdat.hpp  spelldat.cpp  spelldat.h  textdat.cpp  textdat.h  townerdat.cpp  townerdat.hpp
Source/ui/: automap.cpp  automap.h  diablo_msg.cpp  diablo_msg.hpp  gamemenu.cpp  gmenu.cpp  gmenu.h  help.cpp  help.h  interfac.cpp  load_screens.cpp  load_screens.h  menu.cpp  menu.h  menu_framework.cpp  menu_framework.h  minitext.cpp  minitext.h  movie.cpp  player_messages.cpp  player_messages.h  plrmsg.cpp  plrmsg.h  quick_messages.cpp  (+1 more)
(+774 files in other folders)
